src/sample.yaml
apiVersion: /v1
kind: Deployment
metadata:
  name : sample-deploy
  labels:
    app: deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deploy
  template:
    metadata:
      name:
      labels:
        app: deploy
    spec:
      containers:
        name: http-frontend
        image: httpd:2.4-alpinei
