src/securitycontext.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu-sleeper
spec:
  containers:
     name: ubuntu
     image: ubuntu
