src/simple.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-pod
spec:
  containers:
    - name: webapp-color
      image: kodekloud/simple-webapp-mysql
